<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_monocular_object_detection</name>
  <version>1.0.0</version>
  <description>ROS2 port of benchun`s cuboid detection method from his 2022 paper</description>
  <maintainer email="azmyin12@gmail.com">tigerwife</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>rclcpp</build_depend>
  <build_depend>boost_system</build_depend>
  <build_depend>ros2_line_lbd</build_depend>
  <build_depend>ros2_tictoc_profiler</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_1.14</build_depend>
  
  <!-- Execution dependencies -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>boost_system</exec_depend>
  <exec_depend>ros2_line_lbd</exec_depend>
  <exec_depend>ros2_tictoc_profiler</exec_depend>
  
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>pcl_1.14</exec_depend> 
  <!-- This version was installed -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
